2009-01-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:          A few const -> CONST86 modifications, improving
	* generic/tkCanvas.c:    backwards compatibility. Change Tk_ItemIndexProc
	* generic/tkCanvLine.c:  and Tk_ItemInsertProc signature to have a Tcl_Obj parameter
	* generic/tkCanvPoly.c:  in stead of a string parameter. This is binary
	* generic/tkCanvText.c:  and source compatible with previous API, it just prevents
	* doc/CrtItemType.3:     the need for a type cast in the Tk_ItemType table construction.
	* doc/Clipboard.3:       Bring doc in line with API
	* doc/ConfigWidg.3:
	* doc/ParseArgv.3:

2009-01-06  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock): Optimize a common case for
	photo image building. [Patch 1539990] (jepler)

2009-01-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: Use task modal for messagebox instead of system
	modal. [Bug 2484771] (ferrieux,thoyts,mjanssen)

2009-01-03  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n: Improve the documentation of the -offset and
	-outlineoffset item options. [Bug 1836621]

2009-01-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.decls:       CONSTify Tk_ClipboardAppend
	* generic/tkClipboard.c:
	* generic/tkDecls.h: (regenerated)

2008-12-31  David Gravereaux <davygrvy@pobox.com>

	* win/rules.vc: Small bug not setting SYMBOLS macro fixed.

2008-12-31  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkDefaultTheme.c: Fix color palette for radiobutton and
	checkbutton indicators. Fixes [Bug 2003310]; also makes "alt" theme
	check/radiobuttons look like Windows 98, as intended.
	* library/ttk/altTheme.tcl: Specify dark gray -bordercolor to soften
	edges.
	* tests/ttk/{checkbutton,radiobutton}.test: Split out of ttk.test.

2008-12-28  Donal K. Fellows  <dkf@users.sf.net>

	TIP #171 IMPLEMENTATION

	* library/listbox.tcl, library/scrlbar.tcl, library/text.tcl: Adjust